[package]
name = "random-image-server"
version = "0.1.0"
edition = "2024"
authors = [
    "Anthony Rubick <68485672+AnthonyMichaelTDM@users.noreply.github.com>",
]
description = "A simple image server that serves random images from a preconfigured list of paths and URLs."
repository = "https://github.com/AnthonyMichaelTDM/random-image-server"
license = "GPL-3.0-or-later"
readme = "README.md"

[dependencies]
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.2"
anyhow = "1.0.98"
log = "0.4.27"
url = { version = "2.5.4", features = ["serde"] }
rand = "0.9.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
