[package]
name = "random-image-server"
version = "0.1.0"
edition = "2024"
authors = [
    "Anthony Rubick <68485672+AnthonyMichaelTDM@users.noreply.github.com>",
]
description = "A simple image server that serves random images from a preconfigured list of paths and URLs."
repository = "https://github.com/AnthonyMichaelTDM/random-image-server"
license = "GPL-3.0-or-later"
readme = "README.md"

[dependencies]
hyper = { version = "1.0", features = ["server"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1.47", features = ["full"] }
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.2"
tempfile = "3.20"
anyhow = "1.0.98"
log = "0.4.27"
env_logger = "0.11"
chrono = { version = "0.4" }
url = { version = "2.5.4", features = ["serde"] }
rand = "0.9.2"
walkdir = "2.5.0"
mime_guess = "2.0.5"
reqwest = "0.12.22"
uuid = { version = "1.17.0", features = ["v4"] }
md5 = "0.8.0"
pretty_assertions = "1.4.1"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
rstest = "0.26.0"

[package.metadata.cargo-machete]
ignored = ["openssl"] # OpenSSL is there to allow musl builds to work.

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.tarpaulin]
inherits = "test"
opt-level = 0

[[bin]]
name = "random-image-server"
path = "src/main.rs"
test = false
