[package]
name = "random-image-server"
version = "0.2.1"
edition = "2024"
authors = [
    "Anthony Rubick <68485672+AnthonyMichaelTDM@users.noreply.github.com>",
]
description = "A simple image server that serves random images from a preconfigured list of paths and URLs."
repository = "https://github.com/AnthonyMichaelTDM/random-image-server"
license = "GPL-3.0-or-later"
readme = "README.md"

[dependencies]
hyper = { version = "1.0", features = ["server"] }
hyper-util = { version = "0.1", features = ["server-auto", "server-graceful", "tokio", "tracing"] }
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "signal"] }
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
tempfile = "3.23"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = { version = "2.5.7", features = ["serde"] }
rand = "0.9.2"
walkdir = "2.5.0"
mime_guess = "2.0.5"
reqwest = { version = "0.12.25", features = ["charset", "http2", "rustls-tls", "system-proxy"], default-features = false }
uuid = { version = "1.19", features = ["v4"] }
md5 = "0.8.0"
pretty_assertions = "1.4.1"

[dev-dependencies]
rstest = "0.26.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.tarpaulin]
inherits = "test"
opt-level = 0

[[bin]]
name = "random-image-server"
path = "src/main.rs"
test = false
